[package]
name = "shart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
axum = "0.7.5"
rand = "0.8.5"
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = {version = "0.5.2",  features = ["trace"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

